--- a/Fiorello-PB101/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Fiorello-PB101/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,17 +1,17 @@
-﻿@model ProductCreateVM
+﻿@model ProductEditVM
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
 <div class="container mt-5">
-    <form class="forms-sample" method="post" asp-action="Create">
+    <form class="forms-sample" method="post" asp-action="Edit">
         <div class="form-group">
             <label for="exampleInputUsername1">Name</label>
             <input asp-for="Name" class="form-control" id="exampleInputUsername1">
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label for="exampleInputUsername1">Discription</label>
+            <label for="exampleInputUsername1">Description</label>
             <input asp-for="Description" class="form-control" id="exampleInputUsername1">
             <span asp-validation-for="Description" class="text-danger"></span>
         </div>
@@ -33,4 +33,3 @@
         <a class="btn btn-light" asp-action="Index">Cancel</a>
     </form>
 </div>
-
