--- a/Fiorello-PB101/Areas/Admin/Views/Product/Edit.cshtml
+++ b/Fiorello-PB101/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model ProductEditVM
+﻿@model Fiorello_PB101.ViewModels.Products.ProductEditVM
 @{
     ViewData["Title"] = "Edit";
 }
 
 <div class="container mt-5">
-    <form class="forms-sample" method="post" asp-action="Edit">
+    <form class="forms-sample" method="post" asp-action="Edit" enctype="multipart/form-data">
         <div class="form-group">
             <label for="exampleInputUsername1">Name</label>
             <input asp-for="Name" class="form-control" id="exampleInputUsername1">
@@ -25,9 +25,28 @@
             <select asp-for="CategoryId" asp-items="@ViewBag.categories" class="form-control"></select>
         </div>
         <div class="form-group">
-            <label for="exampleInputUsername1">Images</label>
-            <input class="form-control" asp-for="Images" id="exampleInputUsername1">
-            <span asp-validation-for="Images" class="text-danger"></span>
+            <label for="exampleInputUsername1">Existing Images</label>
+            <div>
+                @foreach (var image in Model.ExistingImages)
+                {
+                    <div>
+                        <img src="~/img/@image.Name" alt="@image.Name" width="100" />
+                        <label>
+                            <input type="checkbox" name="ImagesToDelete" value="@image.Id" />
+                            Delete
+                        </label>
+                        <label>
+                            <input type="radio" name="MainImageId" value="@image.Id" @(image.IsMain ? "checked" : "") />
+                            Set as main
+                        </label>
+                    </div>
+                }
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="exampleInputUsername1">New Images</label>
+            <input type="file" class="form-control" asp-for="NewImages" id="exampleInputUsername1" multiple>
+            <span asp-validation-for="NewImages" class="text-danger"></span>
         </div>
         <button type="submit" class="btn btn-primary mr-2">Submit</button>
         <a class="btn btn-light" asp-action="Index">Cancel</a>
